syntax = "proto3";

package protos;

option go_package = "grpc-funnzy-dev/pbs";

message HelloRequest {
  string message = 1;
}

message HelloResponse {
  string message = 1;
}

message SumRequest {
  int32 num1 = 1;
  int32 num2 = 2;
}

message SumResponse {
  int32 sum = 1;
}

service CaculatorService {
  rpc Hello (HelloRequest) returns (HelloResponse) {}
  rpc Sum (SumRequest) returns (SumResponse) {}
}
